# hobbyScript

./: .gitignore  CppScript.sln  README.md  conanfile.py
CppScript/: Base.cpp  Base.h  BasicTypes.cpp  BasicTypes.h  CMakeLists.txt  Context.cpp  Context.h  CppScript.vcxproj  CppScript.vcxproj.filters  Execution.cpp  Execution.h  Json.h  Operations.cpp  Operations.h  OperationsImpl.h  Serializer.cpp  Serializer.h  TypeInfo.h  TypeWrapper.cpp  TypeWrapper.h  Types.cpp  Types.h  Visitor.h
CppScript/include/CppScript/: CoreModule.h  Definitions.h  EnumFlag.h  Execution.h  FunctionDef.h  IntValue.h  ValueHolder.h
CppScript/source/: CoreModule.cpp  Execution.cpp  FunctionDef.cpp  IntUtils.cpp  IntUtils.h  IntValue.cpp
CppScript/test/: CoreModuleTest.cpp  CppScriptTest.cpp  EnumFlagTest.cpp  ExecutionTest.cpp  Fibonacci.h  FunctionDefTest.cpp  IntUtilsTest.cpp  IntValueTest.cpp  TestUtils.cpp  TestUtils.h  ValueHolderTest.cpp  analyzePerformance.py  fibonacci.py
CppScriptTest/: BaseTest.cpp  CppScriptTest.vcxproj  CppScriptTest.vcxproj.filters  ExecutionTest.cpp  OperationsTest.cpp  TypeInfoTest.cpp  TypesTest.cpp  ValueAccessor.h  VisitorMock.h  VisitorTest.cpp  fibonacci.py
test_package/: CMakeLists.txt  PackageTest.cpp  conanfile.py
